@@ -12,19 +12,45 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.version>1.0.0-SNAPSHOT</project.version>
+        <project.groupId>com.rapidapi</project.groupId>
+        <project.artifactId>rapidapi</project.artifactId>
         <maven.compiler.release>24</maven.compiler.release>
+        <maven.compiler.enablePreview>--enable-preview</maven.compiler.enablePreview>
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+        <maven.compiler.failOnError>true</maven.compiler.failOnError>
+        <maven.compiler.failOnWarning>true</maven.compiler.failOnWarning>
+        <maven.compiler.verbose>true</maven.compiler.verbose>
+        <maven.compiler.warnings>all</maven.compiler.warnings>
+        <maven.compiler.deprecation>true</maven.compiler.deprecation>
+        <maven.compiler.unchecked>false</maven.compiler.unchecked>
+        <maven.compiler.lint>all</maven.compiler.lint>
+        <maven.compiler.lint.options>-options,-path</maven.compiler.lint.options>
+        <maven.compiler.lint.showWarnings>true</maven.compiler.lint.showWarnings>
+        <maven.compiler.lint.showDeprecation>true</maven.compiler.lint.showDeprecation>
+        <maven.compiler.lint.failOnError>true</maven.compiler.lint.failOnError>
+        <maven.compiler.lint.failOnWarning>true</maven.compiler.lint.failOnWarning>
+        <maven.compiler.lint.compilerArgument>-Xlint:all</maven.compiler.lint.compilerArgument>
+        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
+        <maven.clean.plugin.version>3.5.0</maven.clean.plugin.version>
+        <maven.install.plugin.version>3.1.4</maven.install.plugin.version>
+        <maven.deploy.plugin.version>3.1.4</maven.deploy.plugin.version>
+        <maven.surefire.plugin.version>3.5.3</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>3.5.3</maven.failsafe.plugin.version>
+        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
+        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
         <maven.version>3.9.11</maven.version>
-        <java.version>24</java.version>
         <jetty.version>12.0.24</jetty.version>
         <jersey.version>3.1.11</jersey.version>
         <hk2.version>3.1.1</hk2.version>
+        <java.version>24</java.version>
         <mavenVersion>3.9.11</mavenVersion>
+        <weld.version>6.0.3.Final</weld.version>
         <!-- <version.maven-plugin-tools>3.9.0</version.maven-plugin-tools> -->
     </properties>
 
     <modules>
         <module>core</module>
-        <!-- <module>rest</module> -->
+        <module>rest</module>
     </modules>
 
     <repositories>
@@ -43,13 +69,80 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Jersy dependencies -->
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>2.1.3</version>
+            </dependency>
+            <!-- compile dependencies -->
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>4.0.5</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>4.0.2</version>
+            </dependency>
+            <!--
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>rest</artifactId>
+                <version>${project.version}</version>
+            </dependency>-->
+            <dependency>
+                <groupId>org.conscrypt</groupId>
+                <artifactId>conscrypt-openjdk-uber</artifactId>
+                <version>2.5.2</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+            <!-- end compile dependencies -->
+            <!-- Jetty dependencies -->
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-common</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.containers</groupId>
+                <artifactId>jersey-container-servlet-core</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-server</artifactId>
                 <version>${jersey.version}</version>
             </dependency>
-            <!-- Dependency management -->
+            <dependency>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>2.0.1</version>
+            </dependency>
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
                 <artifactId>hk2-api</artifactId>
@@ -57,19 +150,60 @@
             </dependency>
             <dependency>
                 <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-core</artifactId>
+                <artifactId>hk2-locator</artifactId>
                 <version>${hk2.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.hk2</groupId>
-                <artifactId>hk2-utils</artifactId>
-                <version>${hk2.version}</version>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-security</artifactId>
+                <version>${jetty.version}</version>
             </dependency>
-            <!-- Security dependencies -->
             <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcprov-jdk18on</artifactId>
-                <version>1.81</version>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-alpn-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-alpn-conscrypt-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.http2</groupId>
+                <artifactId>jetty-http2-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.http3</groupId>
+                <artifactId>jetty-http3-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-util</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.ee10</groupId>
+                <artifactId>jetty-ee10-annotations</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.ee10</groupId>
+                <artifactId>jetty-ee10-servlet</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.ee10</groupId>
+                <artifactId>jetty-ee10-webapp</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey</groupId>
+                <artifactId>jersey-bom</artifactId>
+                <version>3.1.11</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <!--  Apache commons dependencies -->
             <dependency>
@@ -93,13 +227,11 @@
                 <artifactId>jansi</artifactId>
                 <version>2.4.2</version>
             </dependency>
-            <!-- Yaml-->
             <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>2.4</version>
+                <groupId>io.github.cdimascio</groupId>
+                <artifactId>dotenv-java</artifactId>
+                <version>3.2.0</version>
             </dependency>
-            <!-- Test dependencies -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
@@ -216,7 +348,7 @@
                                 <failOnWarning>true</failOnWarning>
                                 <verbose>true</verbose>
                                 <ignoredDependencies>
-                                    org.glassfish.hk2:hk2-locator:jar:*,org.glassfish.hk2:hk2-core:jar:*,
+                                    org.glassfish.hk2:hk2-locator:jar:*,
                                     org.eclipse.jetty:jetty-alpn-conscrypt-server:jar:*,org.fusesource.jansi:jansi:jar:*,ch.qos.logback:logback-classic:jar:*,
                                     org.slf4j:slf4j-api:jar:*,org.apache.maven:maven-compat:*,org.apache.maven.resolver:maven-resolver-connector-basic,
                                     org.apache.maven.resolver:maven-resolver-transport-wagon,org.apache.maven.wagon:wagon-http-lightweight:*
